@@ -1,10 +1,8 @@
-DIST gloox-1.0.10.tar.bz2 670288 SHA256 300e756af97d43f3f70f1e68e4d4c7129d587dface61633f50d2c490876f58a3 SHA512 1c7e9462aedbcb85961c866f3bf461633d45c20058ddb9b75956b7df0daf52c6ead77b3b29e1249b5236a7c546f0f4361303b4279f7dbda35e945ae597622baf WHIRLPOOL 299f518e041a73f416a3b2f179e10c64b1f74b2c370c0763328cfae445e981dbd1670e02791744e8b207de9209d1a24393b2196784779f45f89f9a50317fbf82
 DIST gloox-1.0.11.tar.bz2 672450 SHA256 0967398721fb684bd06ddd9f97623713648be235349092ef6ebefed688dd33c3 SHA512 efb5012781b7fc2c332f7f2da379a4da0bf3bdf4b8ddb96f7950786e5ede13174c5421e3432bd7d945d371562b594caa4d1dc55d83706f58eb4353a99b9b9e58 WHIRLPOOL 7ef61dd3e34636c7513a1fbd86e3dbd07b3a9310810767e2b65975d7b93b0514eaa2f17e069cf740c2c5ff8cb0cdde8f3aeaaf80e5096185627b00f755f63956
+DIST gloox-1.0.12.tar.bz2 673174 SHA256 67125a2e98a9803179af75f1c9c3c0a14f0bc238d48f23c4a3cf7c8fdebc43a9 SHA512 5c7952ffa6203225409a4181dafee8de151a020b5285df9eb31b758716f85bb151eb1adffe542b30258d4bcc1d8c135c79e841371604cd95bcb9bd03fdb972eb WHIRLPOOL e7bfa14bb760e071514a51655772eca7a6414981f92cfba3664ff6ff83622d5541e4a4334c219742b681c6a31156d450f1ef1574f58b0dd9b0025836a6c026ff
 DIST gloox-1.0.9.tar.bz2 670206 SHA256 143dd50e1edc4eb1d304fa28bdd6ab9e53b60c37c1726dd0e34c06c51f9a453e SHA512 a3fa7acc76fdca0421030e71b6a13ca0b04589946df2a781609f1bddae5329299d68ce99a4a94a0760206b112759636379ce67d220422b99302fc799964bfa22 WHIRLPOOL 414eb34fa3ec11ae929f84198d95ed0da9de0739655ae1188ac3eb03998de5cecb9c165ad284496b405b49126236b628dc5b4579e855b10377add145fabb63b1
-DIST gloox-1.0.tar.bz2 603434 SHA256 b53f3e83e97f2f8d46e482620389b7778b7b0d95b2518ce5e1ae6d81bb2bcde8
-EBUILD gloox-1.0.10-r1.ebuild 1116 SHA256 f2eedce38ee3696a460c191793d0e23c26ff6b7413b622e4f0d86dfc2b5c04db SHA512 c220ce6aa0cc6e4e0ced4921e47a6c81c9d7f55d7d745736b5bdadded867b9cbeed16b0b495111a8545dd517c737700b40f7efb7d0bb7f8ec3a72f7005f95dec WHIRLPOOL 7b29a107ec1caf822e790e1aa787eb1e2a6774e7ec093875bbcc0eca798de056135941ea0e2ea038bb19f17ae05fd5e787ada0f231553c42d34aee8341357eab
 EBUILD gloox-1.0.11.ebuild 1111 SHA256 662bcb4c7ae603ee9309ce8e6caa1e0dc99d94f8e2b04ea195be18104d5d63de SHA512 2dbc5342ab1cd3f7d85e037571bc6dc60fe33ffe859f721cb0fc7029ccf3193204367cf54d31a3132582c8cc49110e0614769d355e3e8965ce6ff45c416dc364 WHIRLPOOL 0d3d31142ae91db18451f20552173303a8977a2c1d60344b648c57f59cc286137e3cb4ac334a7d67dbd1804a06dba22ec317ccd74c70d8e7435986fe66df1038
+EBUILD gloox-1.0.12.ebuild 1111 SHA256 6f80ec5dd93f8a2f7f410c73e233078cb44de7bedbfe77f53119395f04018c35 SHA512 06823c5451e0bbc78e7d45e8a2c20c6f5f535b234e6a6302208c61fb6cc66c9004071e13fb7f5313ddfa0416d4caa02748befa713a30e3833448257a1a05b132 WHIRLPOOL 24f0e5bf5a799f8726041c8c1202f965ca8cc8cc6f04821d71cd91b7d08c2dcd4fc950e074aad72a949ba809428afc6c67cc0568739332b750dd74ee106544ee
 EBUILD gloox-1.0.9.ebuild 885 SHA256 f7f8de4ea3586eccde0a365eb274aa820df40372ccc070742826500f375f2dab SHA512 ff396781ff47523dedb3913678c6c3ccb5de5e3d1c723bd5be8f88d2d7e525989fb18d88c716c11ad84c6060218fb38f039a10c5080d190eddfb5d6ec223c6ab WHIRLPOOL b663ca8d2b1c3c39b6ddc049a3aa8dda8a2b4fabce18f1813dd27e815117a9fe45406db5403cc21863a0e77a1731b50e3ca510061ab5929c667773af79398d04
-EBUILD gloox-1.0.ebuild 913 SHA256 6c3e1ffc31f98e107b89d3a6774344cf3b3e20a4a931f5ecc5be2555e1aa2c99 SHA512 92b65fd75dd59d11a476f1a8d1e8b90de96547484fc501d130896b4441ce34a8137e3ad97d0feae4b8e07644a0686e15331f1077d32e48781d27f33957d4a7c3 WHIRLPOOL 2ed8d1ac4ade614e1833eaf03b9d84b75ef3bb8bfb8697c01065b1be596f0296f2cd871139674a51afdea05374634557abd496c5b29103ebc94e805d1244ba71
-MISC ChangeLog 4353 SHA256 aa9ce1f6e62b80c3363f04c87fe01d385e9a4c29f52c14f1464e9c5503ac5bc7 SHA512 320ef39a3941066596fff17969018da889c53cf279dfdc594fb191381d5f0fdb19039ad6e036f82d9cab1ebcfb7b23b9303f85db0ade00e445b2b4f5bb188ef4 WHIRLPOOL 3f55705ef69dda847232b0cc59c707325026b2a9174b4f6b2d19644ef1419677c87faa2c44377ac969406ffb2d107c6c2b019ebb969a3bef8d6d71de28e616a9
+MISC ChangeLog 4528 SHA256 3c013b0197544d84bcce79764e1f444a5e9f4a4aeb1b0ab9e6dd09578463eb12 SHA512 2c788702f08384a441ff4fd78d338be61ff99167edc6c164752d6a8f5a39b826f713efba536db630a61908f26968607a12c22ea2f32e61d44fd397d8fcbccb61 WHIRLPOOL f188fdf396052261c8f225406eadd2cc570a02898afeef580db377aa00008fc2fe4b270a7cac057e9f131be2f60894f4ba6ab7c63531f029b8b56df4b4c7632e
 MISC metadata.xml 159 SHA256 bb3130d2515d5b2e4ff19aff2199bb00ac7c350bf78b34bbec55268bf1013908 SHA512 654eb43c983b348e2a62866073938353ad4eb0360194949986636f4522c18c6691cfbca9257f4e156fc76900b7484a06ebe113d4302fdc9f751c9c43e718d981 WHIRLPOOL c31843111ad45e159a17794975907283af2dabac36bbbb6f98bbd2d56f2e84120857ab0d50af1aca5c5e9661a06edb4dfd84d54ef17b8881a9101e4d986c40dc
