@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/gloox/gloox-1.0.10-r1.ebuild,v 1.4 2014/08/29 02:12:38 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/gloox/gloox-1.0.12.ebuild,v 1.1 2014/11/26 02:42:58 mrueg Exp $
 
 EAPI=5
 
@@ -12,7 +12,7 @@ HOMEPAGE="http://camaya.net/gloox"
 SRC_URI="http://camaya.net/download/${MY_P}.tar.bz2"
 
 LICENSE="GPL-3"
-SLOT="0"
+SLOT="0/12"
 KEYWORDS="~alpha ~amd64 ~arm ~ppc ~ppc64 ~ia64 ~sparc ~x86"
 IUSE="debug gnutls idn ssl static-libs test zlib"
 
@@ -23,7 +23,7 @@ DEPEND="idn? ( net-dns/libidn )
 
 RDEPEND="${DEPEND}"
 
-S="${WORKDIR}/${MY_P}"
+S=${WORKDIR}/${MY_P}
 
 src_prepare() {
 	epatch_user
