@@ -1,6 +1,12 @@
 # ChangeLog for net-libs/gloox
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/gloox/ChangeLog,v 1.28 2014/09/23 23:59:35 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/gloox/ChangeLog,v 1.29 2014/11/26 02:42:58 mrueg Exp $
+
+*gloox-1.0.12 (26 Nov 2014)
+
+  26 Nov 2014; Manuel Rüger <mrueg@gentoo.org> +gloox-1.0.12.ebuild,
+  -gloox-1.0.10-r1.ebuild, -gloox-1.0.ebuild:
+  Version bump. Cleanup old.
 
 *gloox-1.0.11 (23 Sep 2014)
 
